--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="../logo.png" type="image/gif" />
+      <link rel="icon" href="images/logonoho.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="../logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/logonoho.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
