--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
    <div class="masthead">
       <div class="masthead-content text-white">
          <div class="container-fluid px-4 px-lg-0">
+            <img src="assets/img/Logops.png" alt="" style="width: 10rem;">
             <h1 class="fst-italic lh-1 mb-4">Nuestro sitio web estará disponible pronto</h1>
             <p class="mb-5">Estamos trabajando duro para terminar el desarrollo de este sitio. </p>
 
