--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <body>
    <!-- Background Video-->
    <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="assets/mp4/bg.mp4" type="video/mp4" />
+      <!-- <source src="assets/mp4/bg.mp4" type="video/mp4" /> -->
+      <source src="assets/mp4/medellin.mp4" type="video/mp4" />
    </video>
    <!-- Masthead-->
    <div class="masthead">
