--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
 
     <!-- Pricing Plan Start -->
-    <div class="container-fluid pt-5 pricing">
+    <div class="d-none container-fluid pt-5 pricing">
         <div class="container" id="pricing">
             <div class="row">
                 <div class="col-lg-7">
@@ -478,7 +478,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-fluid pt-5">
+    <div class="container-fluid pt-5 d-none ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-5">
@@ -569,7 +569,7 @@
 
 
     <!-- Blog Start -->
-    <div class="d-none container-fluid pt-5">
+    <div class="d-none container-fluid pt-5 d-none">
         <div class="container">
             <div class="text-center">
                 <small class="bg-primary text-white text-uppercase font-weight-bold text-center px-1">Our Blog</small>
