--- a/anterior/index.html
+++ b/anterior/index.html
@@ -71,7 +71,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="img-fluid"
-                        src="img/equipo-programadores-mixtos-que-trabajan-proyectos-grupales-multiples-pantallas-que-muestran-codigo-ejecucion-su-oficina-inicio-codificador-apuntando-lapiz-pantalla-computadora-codigo-compilaci.webp"
+                        src="img/slide.png"
                         alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
