ocultar funcionalidades innecesarias

--- a/anterior/index.html
+++ b/anterior/index.html
@@ -43,7 +43,7 @@
                         <a href="index.html" class="nav-item nav-link ">Inicio</a>
                         <a href="#about" class="nav-item nav-link">Sobre nosotros</a>
                         <a href="#services" class="nav-item nav-link">Servicios</a>
-                        <a href="#pricing" class="nav-item nav-link">Precios</a>
+                        <a href="#pricing" class="nav-item nav-link d-none">Precios</a>
                         <div class="d-none nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
@@ -63,10 +63,10 @@
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#header-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#header-carousel" data-slide-to="1"></li>
-                <li data-target="#header-carousel" data-slide-to="2"></li>
+            <ol class="carousel-indicators  d-none ">
+                <li data-target="#header-carousel  d-none " data-slide-to="0" class="active"></li>
+                <li data-target="#header-carousel  d-none " data-slide-to="1"></li>
+                <li data-target="#header-carousel  d-none " data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item d-none ">
                     <img class="img-fluid"
                         src="img/programer-sitting-at-desk-with-multiple-screens-running-code-talking-with-colleague-about-artificial-intelligence-algorithm-software-developers-doing-innovative-artificial-intelligence-project.jpg"
                         alt="Image">
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item d-none ">
                     <img class="img-fluid" src="img/Software-Developer-Web-Developer-Programmer-6521720.jpg"
                         alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
@@ -417,7 +417,7 @@
 
 
     <!-- Pricing Plan Start -->
-    <div class="container-fluid pt-5 pricing">
+    <div class="container-fluid pt-5 pricing d-none ">
         <div class="container" id="pricing">
             <div class="row">
                 <div class="col-lg-7">
@@ -478,7 +478,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-fluid pt-5">
+    <div class="container-fluid pt-5 d-none ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-5">
@@ -569,7 +569,7 @@
 
 
     <!-- Blog Start -->
-    <div class="d-none container-fluid pt-5">
+    <div class="d-none container-fluid pt-5 d-none ">
         <div class="container">
             <div class="text-center">
                 <small class="bg-primary text-white text-uppercase font-weight-bold text-center px-1">Our Blog</small>
@@ -662,7 +662,7 @@
                     <a class="text-white mb-2" href="#services"><i
                             class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
                     <a class="text-white mb-2" href="#pricing"><i
-                            class="fa fa-angle-right text-primary mr-2"></i>Precios</a>
+                            class="fa fa-angle-right text-primary mr-2 d-none"></i>Precios</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contáctanos</a>
                 </div>
             </div>
