quitar funcionalidad slide principal

--- a/anterior/index.html
+++ b/anterior/index.html
@@ -62,7 +62,7 @@
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
-        <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
+        <div id="header-carousel" class="carousel slide carousel-fade" >
             <ol class="carousel-indicators  d-none ">
                 <li data-target="#header-carousel  d-none " data-slide-to="0" class="active"></li>
                 <li data-target="#header-carousel  d-none " data-slide-to="1"></li>
