ocultar botón de contacto

--- a/anterior/index.html
+++ b/anterior/index.html
@@ -51,7 +51,7 @@
                                 <a href="single.html" class="dropdown-item">Blog Detail</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
+                        <a href="contact.html" class="nav-item nav-link d-none">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -663,7 +663,7 @@
                             class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
                     <a class="text-white mb-2" href="#pricing"><i
                             class="fa fa-angle-right text-primary mr-2 d-none"></i>Precios</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contáctanos</a>
+                    <a class="text-white d-none" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contáctanos</a>
                 </div>
             </div>
             <div class="d-none col-lg-3 col-md-6 mb-5">
