--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="d-none text-white text-uppercase mb-md-3">Creative Agency</h5>
-                            <h1 class="display-3 text-white mb-md-4">Libere el potencial de su marca con nuestros
-                                servicios</h1>
+                            <h1 class="display-3 text-white mb-md-4">Aumente el potencial de su marca con Noho Digital.</h1>
                             <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2 d-none">Learn
                                 More</a>
                         </div>
@@ -178,9 +177,9 @@
                 <div class="col-lg-4 mb-5">
                     <small class="bg-primary text-white text-uppercase font-weight-bold px-1">¿Que hacemos?</small>
                     <h1 class="mt-2 mb-3">Nuestros servicios</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Nuestra empresa ofrece una amplia gama de servicios
+                    <h4 class="font-weight-normal text-muted mb-4">En Noho ofrecemos una amplia gama de servicios
                         para ayudar a nuestros clientes a alcanzar sus objetivos de negocios. A continuación, encontrará
-                        una descripción detallada de los servicios que ofrecemos:</h4>
+                        una descripción detallada:</h4>
                     <a href="" class="d-none btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Discover More</a>
                 </div>
                 <div class="col-lg-8">
@@ -204,8 +203,7 @@
                                 <div class="d-flex flex-column">
                                     <h4 class="font-weight-bold mb-3">Desarrollo web</h4>
                                     <p>Utilizamos las últimas tecnologías y herramientas de desarrollo para crear sitios
-                                        web personalizados que sean intuitivos y fáciles de usar. Nos aseguramos de que
-                                        nuestros sitios web cumplan con los estándares de accesibilidad, seguridad y
+                                        web personalizados que sean intuitivos y fáciles de usar. Nos aseguramos de cumplarir con los estándares de accesibilidad, seguridad y
                                         velocidad de carga.</p>
                                     <a class="d-none font-weight-semi-bold" href="">Read More <i
                                             class="fa fa-angle-double-right"></i></a>
@@ -219,8 +217,7 @@
                                 <div class="d-flex flex-column">
                                     <h4 class="font-weight-bold mb-3">Desarrollo de aplicaciones móviles</h4>
                                     <p>Creamos aplicaciones móviles personalizadas para ayudar a nuestros clientes a
-                                        llegar a su audiencia a través de dispositivos móviles. Desarrollamos
-                                        aplicaciones para plataformas iOS y Android que sean intuitivas, seguras y
+                                        llegar a su audiencia a través de dispositivos móviles. Desarrollamos para plataformas iOS y Android que sean intuitivas, seguras y
                                         escalables.</p>
                                     <a class="d-none font-weight-semi-bold" href="">Read More <i
                                             class="fa fa-angle-double-right"></i></a>
