Se mejora la presentacion visual del elemaento fa-phone de nuestros servicios

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>Noho Digital</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -12,64 +13,46 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
     <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet" />
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
-  </head>
+    <link href="css/mystyle.css" rel="stylesheet" />
+</head>
 
-  <body>
+<body>
     <!-- Navbar Start -->
     <div class="container-fluid nav-bar p-0 menu">
-      <div class="container-lg p-0">
-        <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-          <a href="index.html" class="navbar-brand">
-            <img style="width: 5rem" src="./img/Logo.png" alt="" />
-            <!-- <h1 class="m-0 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1> -->
-          </a>
-          <button
-            type="button"
-            class="navbar-toggler"
-            data-toggle="collapse"
-            data-target="#navbarCollapse"
-          >
+        <div class="container-lg p-0">
+            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+                <a href="index.html" class="navbar-brand">
+                    <img style="width: 5rem" src="./img/Logo.png" alt="" />
+                    <!-- <h1 class="m-0 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1> -->
+                </a>
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            class="collapse navbar-collapse justify-content-between"
-            id="navbarCollapse"
-          >
-            <div class="navbar-nav ml-auto py-0">
-              <a href="index.html" class="nav-item nav-link">Inicio</a>
-              <a href="#about" class="nav-item nav-link">Sobre nosotros</a>
-              <a href="#services" class="nav-item nav-link">Servicios</a>
-              <a href="#pricing" class="nav-item nav-link d-none">Precios</a>
-              <div class="d-none nav-item dropdown">
-                <a
-                  href="#"
-                  class="nav-link dropdown-toggle"
-                  data-toggle="dropdown"
-                  >Pages</a
+                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                    <div class="navbar-nav ml-auto py-0">
+                        <a href="index.html" class="nav-item nav-link">Inicio</a>
+                        <a href="#about" class="nav-item nav-link">Sobre nosotros</a>
+                        <a href="#services" class="nav-item nav-link">Servicios</a>
+                        <a href="#pricing" class="nav-item nav-link d-none">Precios</a>
+                        <div class="d-none nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a
                 >
                 <div class="dropdown-menu border-0 rounded-0 m-0">
                   <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                  <a href="single.html" class="dropdown-item">Blog Detail</a>
-                </div>
-              </div>
-              <a href="contact.html" class="nav-item nav-link d-none"
-                >Contacto</a
+                            <a href="single.html" class="dropdown-item">Blog Detail</a>
+                        </div>
+                    </div>
+                    <a href="contact.html" class="nav-item nav-link d-none">Contacto</a
               >
             </div>
           </div>
@@ -280,82 +263,66 @@
                     <a class="d-none font-weight-semi-bold" href=""
                       >Read More <i class="fa fa-angle-double-right"></i
                     ></a>
-                  </div>
                 </div>
-              </div>
-              <div class="col-md-6 mb-5">
-                <div class="d-flex">
-                  <i class="fa fa-3x fa-code text-primary mr-4"></i>
-                  <div class="d-flex flex-column">
-                    <h4 class="font-weight-bold mb-3">Desarrollo web</h4>
-                    <p>
-                      Utilizamos las últimas tecnologías y herramientas de
-                      desarrollo para crear sitios web personalizados que sean
-                      intuitivos y fáciles de usar. Nos aseguramos de cumplarir
-                      con los estándares de accesibilidad, seguridad y velocidad
-                      de carga.
-                    </p>
-                    <a class="d-none font-weight-semi-bold" href=""
-                      >Read More <i class="fa fa-angle-double-right"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 mb-5">
-                <div class="d-flex">
-                  <!-- <i class="fa fa-3x fa-envelope-open-text text-primary mr-4"></i> -->
-                  <i class="fa fa-3x fa-solid fa-mobile text-primary mr-4"></i>
-                  <div class="d-flex flex-column">
-                    <h4 class="font-weight-bold mb-3">
-                      Desarrollo de aplicaciones móviles
-                    </h4>
-                    <p>
-                      Creamos aplicaciones móviles personalizadas para ayudar a
-                      nuestros clientes a llegar a su audiencia a través de
-                      dispositivos móviles. Desarrollamos para plataformas iOS y
-                      Android que sean intuitivas, seguras y escalables.
-                    </p>
-                    <a class="d-none font-weight-semi-bold" href=""
-                      >Read More <i class="fa fa-angle-double-right"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 mb-5">
-                <div class="d-flex">
-                  <i class="fa fa-3x fa-chart-line text-primary mr-4"></i>
-                  <div class="d-flex flex-column">
-                    <h4 class="font-weight-bold mb-3">
-                      Optimización de la experiencia del usuario (UX)
-                    </h4>
-                    <p>
-                      Nos aseguramos de que la experiencia del usuario sea la
-                      mejor posible para nuestros clientes y sus usuarios.
-                      Optimizamos la navegación, la velocidad de carga y el
-                      diseño para garantizar que los usuarios tengan una
-                      experiencia fácil y satisfactoria.
-                    </p>
-                    <a class="d-none font-weight-semi-bold" href=""
-                      >Read More <i class="fa fa-angle-double-right"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
+    <div class="col-md-6 mb-5">
+        <div class="d-flex">
+            <i class="fa fa-3x fa-code text-primary mr-4"></i>
+            <div class="d-flex flex-column">
+                <h4 class="font-weight-bold mb-3">Desarrollo web</h4>
+                <p>
+                    Utilizamos las últimas tecnologías y herramientas de desarrollo para crear sitios web personalizados que sean intuitivos y fáciles de usar. Nos aseguramos de cumplarir con los estándares de accesibilidad, seguridad y velocidad de carga.
+                </p>
+                <a class="d-none font-weight-semi-bold" href="">Read More <i class="fa fa-angle-double-right"></i
+                    ></a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 mb-5">
+        <div class="d-flex">
+            <!-- <i class="fa fa-3x fa-envelope-open-text text-primary mr-4"></i> -->
+            <i id="fa-mobile-center" class="fa fa-3x fa-solid fa-mobile text-primary mr-4"></i>
+            <div class="d-flex flex-column">
+                <h4 class="font-weight-bold mb-3">
+                    Desarrollo de aplicaciones móviles
+                </h4>
+                <p>
+                    Creamos aplicaciones móviles personalizadas para ayudar a nuestros clientes a llegar a su audiencia a través de dispositivos móviles. Desarrollamos para plataformas iOS y Android que sean intuitivas, seguras y escalables.
+                </p>
+                <a class="d-none font-weight-semi-bold" href="">Read More <i class="fa fa-angle-double-right"></i
+                    ></a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 mb-5">
+        <div class="d-flex">
+            <i class="fa fa-3x fa-chart-line text-primary mr-4"></i>
+            <div class="d-flex flex-column">
+                <h4 class="font-weight-bold mb-3">
+                    Optimización de la experiencia del usuario (UX)
+                </h4>
+                <p>
+                    Nos aseguramos de que la experiencia del usuario sea la mejor posible para nuestros clientes y sus usuarios. Optimizamos la navegación, la velocidad de carga y el diseño para garantizar que los usuarios tengan una experiencia fácil y satisfactoria.
+                </p>
+                <a class="d-none font-weight-semi-bold" href="">Read More <i class="fa fa-angle-double-right"></i
+                    ></a>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
     </div>
     <!-- Services End -->
 
     <!-- Features Start -->
     <div class="d-none container-fluid pt-5 pb-2">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 mb-5">
-            <small
-              class="bg-primary text-white text-uppercase font-weight-bold px-1"
-              >Why Choose Us</small
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 mb-5">
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">Why Choose Us</small
             >
             <h1 class="mt-2 mb-3">25 Years Expereince</h1>
             <h4 class="font-weight-normal text-muted mb-4">
