Ajustes de textos

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
           <div class="col-lg-7 mt-5 mt-lg-0">
             <small
               class="bg-primary text-white text-uppercase font-weight-bold px-1"
-              >¿Quienes somos?</small
+              >¿Quiénes somos?</small
             >
             <h1 class="mt-2 mb-4">
-              Desarrollo de Software: Soluciones Personalizadas para Tu Negocio
+              Desarrollo de Software: Soluciones personalizadas para tu negocio
             </h1>
             <p class="mb-4">
               Nuestra empresa se dedica al desarrollo de software de alta
@@ -191,7 +191,7 @@
             >
               <i class="fa fa-2x fa-map-marker-alt text-primary mr-3"></i>
               <div class="d-flex flex-column">
-                <h5 class="font-weight-bold">Nuestra oficina</h5>
+                <h5 class="font-weight-bold">Nuestro origen</h5>
                 <p class="m-0">Medellín, Antioquia, Colombia</p>
               </div>
             </div>
@@ -217,7 +217,7 @@
               <div class="d-flex flex-column">
                 <h5 class="font-weight-bold">Llámanos</h5>
                 <p class="m-0">+57 3205822261</p>
-                <p class="m-0">+57 310 8961229</p>
+                <p class="m-0">+57 3108961229</p>
               </div>
             </div>
           </div>
@@ -233,7 +233,7 @@
           <div class="col-lg-4 mb-5">
             <small
               class="bg-primary text-white text-uppercase font-weight-bold px-1"
-              >¿Que hacemos?</small
+              >¿Qué hacemos?</small
             >
             <h1 class="mt-2 mb-3">Nuestros servicios</h1>
             <h4 class="font-weight-normal text-muted mb-4">
