Mejora visual de boton volver arriba

--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
     <!-- Footer End -->
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary back-to-top"
+    <a title="Volver arriba" href="#" class="btn btn-lg btn-back-to-top back-to-top "
       ><i class="fa fa-angle-up"></i
     ></a>
 
