--- a/index.html
+++ b/index.html
@@ -898,46 +898,46 @@
           <!-- <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p> -->
           <div class="d-flex justify-content-start mt-4">
             <a
-              class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+              class="btn btn-outline-primary-highlight rounded-circle text-center mr-2 px-0"
               style="width: 38px; height: 38px"
               href="#"
-              ><i class="fab fa-twitter"></i
+              ><i class="fab fa-twitter "></i
             ></a>
             <a
-              class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+              class="btn btn-outline-primary-highlight rounded-circle text-center mr-2 px-0"
               style="width: 38px; height: 38px"
               href="#"
-              ><i class="fab fa-facebook-f"></i
+              ><i class="fab fa-facebook-f "></i
             ></a>
             <a
-              class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+              class="btn btn-outline-primary-highlight rounded-circle text-center mr-2 px-0"
               style="width: 38px; height: 38px"
               href="#"
-              ><i class="fab fa-linkedin-in"></i
+              ><i class="fab fa-linkedin-in "></i
             ></a>
             <a
-              class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+              class="btn btn-outline-primary-highlight rounded-circle text-center mr-2 px-0"
               style="width: 38px; height: 38px"
               href="#"
-              ><i class="fab fa-instagram"></i
+              ><i class="fab fa-instagram "></i
             ></a>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-          <h5 class="font-weight-bold text-primary mb-4">Enlaces</h5>
+          <h5 class="font-weight-bold text-primary-highlight mb-4">Enlaces</h5>
           <div class="d-flex flex-column justify-content-start">
             <a class="text-white mb-2" href="index.html"
-              ><i class="fa fa-angle-right text-primary mr-2"></i>Inicio</a
+              ><i class="fa fa-angle-right text-primary-highlight mr-2"></i>Inicio</a
             >
             <a class="text-white mb-2" href="#about"
-              ><i class="fa fa-angle-right text-primary mr-2"></i>Sobre
+              ><i class="fa fa-angle-right text-primary-highlight mr-2"></i>Sobre
               nosotros</a
             >
             <a class="text-white mb-2" href="#services"
-              ><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a
+              ><i class="fa fa-angle-right text-primary-highlight mr-2"></i>Servicios</a
             >
-            <a class="text-white mb-2" href="#pricing"
-              ><i class="fa fa-angle-right text-primary mr-2 d-none"></i
+            <a class="text-white mb-2 d-none" href="#pricing"
+              ><i class="fa fa-angle-right text-primary-highlight mr-2 "></i
               >Precios</a
             >
             <a class="text-white d-none" href="#"
@@ -966,23 +966,23 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-          <h5 class="font-weight-bold text-primary mb-4">
+          <h5 class="font-weight-bold text-primary-highlight mb-4">
             Ponerse en contacto
           </h5>
           <p class="d-none">
             Dolor clita stet nonumy clita diam vero, et et ipsum diam labore
           </p>
           <p>
-            <i class="fa fa-map-marker-alt text-primary mr-2"></i>Medellín,
+            <i class="fa fa-map-marker-alt text-primary-highlight mr-2"></i>Medellín,
             Antioquia, Colombia
           </p>
           <p>
-            <i class="fa fa-phone-alt text-primary mr-2"></i>+57 3205822261
+            <i class="fa fa-phone-alt text-primary-highlight mr-2"></i>+57 3205822261
             <br />
             &nbsp; &nbsp;&nbsp;&nbsp; +57 310 8961229
           </p>
           <p>
-            <i class="fa fa-envelope text-primary mr-2"></i>info@noho.digital
+            <i class="fa fa-envelope text-primary-highlight mr-2"></i>info@noho.digital
           </p>
           <div>&nbsp;</div>
         </div>
