--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
-                    <img style="width: 5rem" src="./img/Logo.png" alt="" />
+                    <img id="img-nav-logo" style="width: 5rem" src="./img/Logo.png" alt="" />
                     <!-- <h1 class="m-0 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1> -->
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -945,23 +945,23 @@
             >
           </div>
         </div>
-        <div class="d-none col-lg-3 col-md-6 mb-5">
-          <h5 class="font-weight-bold text-primary mb-4">Popular Links</h5>
+        <div class="col-lg-3 col-md-6 mb-5">
+          <h5 class="font-weight-bold text-primary-highlight mb-4">Links de interes</h5>
           <div class="d-flex flex-column justify-content-start">
-            <a class="text-white mb-2" href="#"
-              ><i class="fa fa-angle-right text-primary mr-2"></i>Home</a
+            <a class="text-white mb-2 d-none" href="#"
+              ><i class="fa fa-angle-right text-primary-highlight mr-2"></i>Home</a
+            >
+            <a class="text-white mb-2 d-none" href="#"
+              ><i class="fa fa-angle-right text-primary-highlight mr-2"></i>About Us</a
             >
             <a class="text-white mb-2" href="#"
-              ><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a
+              ><i class="fa fa-angle-right text-primary-highlight mr-2"></i>Productos</a
             >
             <a class="text-white mb-2" href="#"
-              ><i class="fa fa-angle-right text-primary mr-2"></i>Services</a
+              ><i class="fa fa-angle-right text-primary-highlight mr-2"></i>Precios</a
             >
-            <a class="text-white mb-2" href="#"
-              ><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a
-            >
-            <a class="text-white" href="#"
-              ><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a
+            <a class="text-white d-none" href="#"
+              ><i class="fa fa-angle-right text-primary-highlight mr-2"></i>Contact Us</a
             >
           </div>
         </div>
