--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <!-- Navbar Start -->
-    <div class="container-fluid nav-bar p-0 menu">
+    <div class="container-fluid nav-bar p-0 menu z-index-nav">
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
