ajusta textos y favicon

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <small class="bg-primary text-white text-uppercase font-weight-bold px-1">¿Qué hacemos?</small>
                     <h1 class="mt-2 mb-3">Nuestros servicios</h1>
                     <h4 class="font-weight-normal text-muted mb-4">
-                        En Noho ofrecemos una amplia gama de servicios para ayudar a nuestros clientes a alcanzar sus objetivos de negocios. A continuación, encontrará una descripción detallada:
+                        Ofrecemos una amplia gama de servicios tecnológicos para ayudarte a realizar tus objetivos de negocios. A continuación, encontrará una descripción de los más relevantes:
                     </h4>
                     <a href="" class="d-none btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Discover More</a>
                 </div>
@@ -196,7 +196,7 @@
                                 <div class="d-flex flex-column">
                                     <h4 class="font-weight-bold mb-3">Diseño web</h4>
                                     <p>
-                                        Nuestro equipo de diseñadores web altamente experimentados trabaja en estrecha colaboración con nuestros clientes para crear sitios web atractivos, modernos y responsivos que reflejen la marca y la visión de la empresa.
+                                        Contamos con un grupo de diseñadores y consultores web altamente experimentados que trabajarán en estrecha colaboración para crear sitios web atractivos, modernos, responsivos y cómodos que reflejen la marca y la visión de tu empresa.
                                     </p>
                                     <a class="d-none font-weight-semi-bold" href="">Read More <i class="fa fa-angle-double-right"></i></a>
                                 </div>
@@ -208,7 +208,8 @@
                                 <div class="d-flex flex-column">
                                     <h4 class="font-weight-bold mb-3">Desarrollo web</h4>
                                     <p>
-                                        Utilizamos las últimas tecnologías y herramientas de desarrollo para crear sitios web personalizados que sean intuitivos y fáciles de usar. Nos aseguramos de cumplarir con los estándares de accesibilidad, seguridad y velocidad de carga.
+                                        Utilizamos las últimas tecnologías y herramientas de desarrollo para crear sitios web personalizados que sean intuitivos y fáciles de usar. Nos aseguramos de cumplir con los estándares de accesibilidad, seguridad y velocidad de carga que más se ajusten
+                                        a tus necesidades.
                                     </p>
                                     <a class="d-none font-weight-semi-bold" href="">Read More <i class="fa fa-angle-double-right"></i></a>
                                 </div>
@@ -223,7 +224,7 @@
                                         Desarrollo de aplicaciones móviles
                                     </h4>
                                     <p>
-                                        Creamos aplicaciones móviles personalizadas para ayudar a nuestros clientes a llegar a su audiencia a través de dispositivos móviles. Desarrollamos para plataformas iOS y Android que sean intuitivas, seguras y escalables.
+                                        Creamos aplicaciones móviles multiplataformas a la medida que busca un equilibrio entre utilidad y economía para ayudarte a llegar a tus clientes a través de dispositivos móviles.
                                     </p>
                                     <a class="d-none font-weight-semi-bold" href="">Read More <i class="fa fa-angle-double-right"></i></a>
                                 </div>
@@ -237,7 +238,7 @@
                                         Optimización de la experiencia del usuario (UX)
                                     </h4>
                                     <p>
-                                        Nos aseguramos de que la experiencia del usuario sea la mejor posible para nuestros clientes y sus usuarios. Optimizamos la navegación, la velocidad de carga y el diseño para garantizar que los usuarios tengan una experiencia fácil y satisfactoria.
+                                        Nos aseguramos de que la experiencia del usuario sea la mejor posible. Optimizamos la navegación, la velocidad de carga y el diseño para garantizar que tu y tus clientes tengan una experiencia fácil y satisfactoria.
                                     </p>
                                     <a class="d-none font-weight-semi-bold" href="">Read More <i class="fa fa-angle-double-right"></i></a>
                                 </div>
