--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   >Pages</a
                 >
                 <div class="dropdown-menu border-0 rounded-0 m-0">
-                  <a href="blog.html" class="dropdown-item">Blog Grid</a>
+                  <a href="blog.noho.digital" class="dropdown-item">Blog</a>
                   <a href="single.html" class="dropdown-item">Blog Detail</a>
                 </div>
               </div>
