--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 >Sobre nosotros</a
               >
               <a href="#pointtoservices" class="nav-item nav-link">Servicios</a>
-              <a href="blog.noho.digita" class="nav-item nav-link">Blog</a>
+              <a href="http://blog.noho.digital/" class="nav-item nav-link">Blog</a>
               <a href="#pricing" class="nav-item nav-link d-none">Precios</a>
               <div class="d-none nav-item dropdown">
                 <a
