--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
               </div>
               <div class="team-item">
                 <div class="position-relative">
-                  <img class="img-fluid w-100" src="img/IMG-20230315-WA0015.jpg" alt="" />
+                  <img class="img-fluid w-100" src="img/SquarePic_20230315_16243259.jpg" alt="" />
                   <div
                     class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3"
                   >
