lineas de separación de seccion

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
     </div>
     <!-- About End -->
-
+    <hr class="hr-separate"></hr>
 
     <!-- values Start -->
     <div class="container-fluid pt-5 pb-3">
@@ -288,7 +288,7 @@
     </div>
     <!-- values End -->
 
-
+    <hr class="hr-separate"></hr>
 
     <!-- Services Start -->
     <div class="container-fluid pt-5 pb-3">
@@ -368,7 +368,7 @@
         </div>
     </div>
     <!-- Services End -->
-
+    <hr class="hr-separate"></hr>
     <!-- Features Start -->
     <div class="d-none container-fluid pt-5 pb-2">
         <div class="container">
