Agrega apuntadores de seccion

--- a/index.html
+++ b/index.html
@@ -756,9 +756,9 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="index.html"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Inicio</a>
-                    <a class="text-white mb-2" href="#about"><i
+                    <a class="text-white mb-2" href="#pointtoabout"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Sobre nosotros</a>
-                    <a class="text-white mb-2" href="#services"><i
+                    <a class="text-white mb-2" href="#pointtoservices"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Servicios</a>
                     <a class="text-white mb-2 d-none" href="#pricing"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Precios</a>
