--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
         </div>
     </div>
     <!-- About End -->
-    <hr class="hr-separate"></hr>
+    <hr class="hr-separate">
+    </hr>
 
     <!-- values Start -->
     <div class="container-fluid pt-5 pb-3">
@@ -288,7 +289,8 @@
     </div>
     <!-- values End -->
 
-    <hr class="hr-separate"></hr>
+    <hr class="hr-separate">
+    </hr>
 
     <!-- Services Start -->
     <div class="container-fluid pt-5 pb-3">
@@ -368,7 +370,8 @@
         </div>
     </div>
     <!-- Services End -->
-    <hr class="hr-separate"></hr>
+    <hr class="hr-separate">
+    </hr>
     <!-- Features Start -->
     <div class="d-none container-fluid pt-5 pb-2">
         <div class="container">
