--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <i class="fas fa-2x fa-phone-alt text-primary mr-3"></i>
                         <div class="d-flex flex-column">
                             <h5 class="font-weight-bold">Llámanos</h5>
-                            <p class="m-0"><a href="tel:+573239285414">+57 323 9285414</a></p>
+                            <p class="m-0"><a style=" text-decoration: none; color: #4A4A4A" href="tel:+573239285414">+57 323 9285414</a></p>
                         </div>
                     </div>
                 </div>
@@ -796,7 +796,7 @@
                     <i class="fa fa-map-marker-alt text-primary-highlight mr-2"></i>Medellín, Antioquia, Colombia
                 </p>
                 <p>
-                    <i class="fa fa-phone-alt text-primary-highlight mr-2"></i><a href="tel:+573239285414">+57 323 9285414</a>
+                    <i class="fa fa-phone-alt text-primary-highlight mr-2"></i><a style=" text-decoration: none; color: #4A4A4A" href="tel:+573239285414">+57 323 9285414</a>
                 </p>
                 <p>
                     <i class="fa fa-envelope text-primary-highlight mr-2"></i><a href="mailto:info@noho.digital" style="text-decoration: none; color: #fff;">info@noho.digital</a>
