--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                     <i class="fa fa-map-marker-alt text-primary-highlight mr-2"></i>Medellín, Antioquia, Colombia
                 </p>
                 <p>
-                    <i class="fa fa-phone-alt text-primary-highlight mr-2"></i><a style=" text-decoration: none; color: #4A4A4A" href="tel:+573239285414">+57 323 9285414</a>
+                    <i class="fa fa-phone-alt text-primary-highlight mr-2"></i><a style=" text-decoration: none; color: white;" href="tel:+573239285414">+57 323 9285414</a>
                 </p>
                 <p>
                     <i class="fa fa-envelope text-primary-highlight mr-2"></i><a href="mailto:info@noho.digital" style="text-decoration: none; color: #fff;">info@noho.digital</a>
