--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                     <div class="owl-carousel team-carousel">
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/andres.png" alt="" />
+                                <img class="img-fluid w-100" src="img/andres2.jpg" alt="" />
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <a class="d-none btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
